# summer_Internship_code

./: myfile.txt
2023_Intern/: CMakeLists.txt  package.xml
2023_Intern/include/: Control.h
2023_Intern/src/: Control.cpp  pure.txt  test_two
control_node/: CMakeLists.txt  package.xml
control_node/include/control_node/ControlMsgs/: ControlMsgs.cpp  ControlMsgs.h
control_node/include/control_node/Planning/: planning.h
control_node/include/control_node/error_calculate/: error_calculate.cpp  error_calculate.h
control_node/include/control_node/math_functions/: math_functions.cpp  math_functions.h
control_node/include/control_node/pid/: pid.cpp  pid.h
control_node/include/control_node/pure_pursuit/: PurePursuitControl.cpp  PurePursuitControl.h
control_node/include/control_node/stanley/: stanley.cpp  stanley.h
control_node/include/control_node/waypoint_save/: get_lat_lon.cpp  waypoint_save.h
control_node/src/: control.cpp
cubic_spline/: CMakeLists.txt  package.xml
cubic_spline/include/: spline.h
cubic_spline/src/: spline  spline.cpp
curve_display/: CMakeLists.txt  package.xml  readme.md
curve_display/include/curve_display/: display.cpp  display.h
curve_display/include/waypoint_save/: get_lat_lon.cpp  waypoint_save.h
curve_display/src/: curve_display_node.cpp
detection_traffic_sign/: CMakeLists.txt  package.xml
detection_traffic_sign/msg/: red.msg
detection_traffic_sign/src/: detection_traffic_sign.cpp
lattice/: CMakeLists.txt  package.xml
lattice/include/: lattice.h
lattice/src/: lattice  lattice.cpp
localplanning/: CMakeLists.txt  package.xml
localplanning/include/localplanning/: localplanning.h
localplanning/src/: localplanning.cpp
my_car_waypoint_display/: CMakeLists.txt  package.xml
my_car_waypoint_display/src/: odometry_pub_node.cpp  pub_lat_lon.cpp
my_configuration/: cybertruck.json  kichang.json  mustang.json
new/: new
planning_node/: CMakeLists.txt  package.xml
planning_node/include/planning_node/VehicleMsgs/: VehicleMsgs.cpp  VehicleMsgs.h
planning_node/include/planning_node/plan/: planning.h
planning_node/include/planning_node/search/: search.cpp  search.h
planning_node/include/planning_node/stanley/: stanley.cpp  stanley.h
planning_node/include/planning_node/waypoint_save/: get_lat_lon.cpp  waypoint_save.cpp
planning_node/msg/: waypoint_msg.msg
planning_node/src/: planning.cpp
pure_pursuit/: CMakeLists.txt  package.xml
pure_pursuit/include/pure_pursuit/: PurePursuitControl.h
pure_pursuit/include/pure_pursuit/ControlMsgs/: ControlMsgs.cpp  ControlMsgs.h
pure_pursuit/include/pure_pursuit/Planning/: planning.h
pure_pursuit/include/pure_pursuit/pid/: pid.cpp
pure_pursuit/include/pure_pursuit/waypoint_save/: get_lat_lon.cpp  waypoint_save.cpp  waypoint_save.h
pure_pursuit/src/: PurePursuitControl.cpp  following_lat_lon.cpp  main.cpp
statelattice/: CMakeLists.txt  package.xml
statelattice/include/statelattice/: lattice.h
statelattice/src/: baseframe.cpp
tftest/: CMakeLists.txt  package.xml
tftest/src/: tftest.cpp
waypoint_make/: CMakeLists.txt  package.xml
waypoint_make/msg/: waypoint_msg.msg
waypoint_make/src/: Points.txt  test  test.cpp  text.txt  waypoint.txt  waypoint_2nd.txt  waypoint_make.cpp
wheel_center_tf/: CMakeLists.txt  package.xml
wheel_center_tf/launch/: wheel_tf_broadcast.launch
wheel_center_tf/src/: publish_wheel_center_pose.cpp
