<?xml version="1.0"?>
<package format="2">
<name>waypoint_make</name>
<version>0.1.0</version>
<description>ROS turtorial package to learn the topic</description>
<license>Apache 2.0</license>
<author email="djstn0613@gmail.com">Eonsoo Park</author>
<maintainer email="djstn0613@gmail.com">Eonsoo Park</maintainer>
<url type="website">http://www.robotis.com</url>
<url type="repository">https://github.com/ROBOTIS-GIT/ros_tutorials.git</url>
<url type="bugtracker">https://github.com/ROBOTIS-GIT/ros_tutorials/issues</url ><buildtool_depend>catkin</buildtool_depend>
<!-- <depend>roscpp</depend>
<depend>std_msgs</depend>
<depend>message_generation</depend> -->
<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>visualization_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>message_generation</build_depend> <!--추가 사항 -->
<exec_depend>roscpp</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>visualization_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>message_runtime</exec_depend>
<export></export >
</package>